# rocket-app

./: Cargo.toml  README.md  Rocket.toml  database.sqlite  database.sqlite-shm  database.sqlite-wal  diesel.toml
migrations/2024-08-06-210538_create_rustaceans/: down.sql  up.sql
src/: auth.rs  main.rs  models.rs  repositories.rs  schema.rs
